# moon-ide

./: .editorconfig  .gitignore  .lintstagedrc.json  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  LICENSE  README.md  Test.ts  index.html  package.json  rustfmt.toml  test.ts  tsconfig.json  vite.config.ts
.github/workflows/: moon-base.yml
companion/: index.html  tsconfig.json  vite.config.ts
companion/public/: manifest.webmanifest  sw.js
companion/src/: App.svelte  global.d.ts  main.ts  styles.css
crates/moon-agent/: Cargo.toml
crates/moon-bridge/: Cargo.toml
crates/moon-bridge/src/: discovery.rs  enrollment.rs  http.rs  main.rs  mdns.rs  pairing.rs  relay.rs  serve.rs  status.rs  tls.rs
crates/moon-coder/: Cargo.toml
crates/moon-coder/src/: anthropic.rs  auth.rs  compaction.rs  coordinator.rs  defaults.rs  error.rs  event.rs  folder_summary.rs  hub_sync.rs  inference.rs  lib.rs  mcp.rs  models.rs  prompts.rs  providers.rs  runner.rs  sessions.rs  subagent.rs  todo.rs  tools.rs  web.rs
crates/moon-container/: Cargo.toml
crates/moon-container/src/: compose.rs  discovery.rs  lib.rs  lifecycle.rs  network.rs  port_forward.rs  project.rs  project_compose.rs  restart_override.rs  status_cache.rs
crates/moon-container/tests/: discovery_to_compose.rs
crates/moon-core/: Cargo.toml
crates/moon-core/src/: app_state.rs  editorconfig.rs  format.rs  host.rs  lib.rs  lint_staged.rs  logs.rs  next_edit.rs  next_edit_server.rs  pre_save.rs  search.rs  session.rs  shell.rs  workspace.rs  worktree.rs
crates/moon-core/src/lsp/: broker.rs  client.rs  framing.rs  mod.rs  server.rs  spawn.rs  translate.rs
crates/moon-protocol/: Cargo.toml
crates/moon-remote/: Cargo.toml
crates/moon-remote/src/: main.rs
crates/moon-slack/: Cargo.toml
crates/moon-slack/src/: client.rs  error.rs  lib.rs  storage.rs
crates/moon-terminal/: Cargo.toml
crates/moon-terminal/src/: lib.rs  pty.rs  target.rs
images/moon-base/: Dockerfile  README.md  daemon.json  entrypoint.sh  moon-edit
scripts/: gen-companion-icons.mjs  stage-bridge.mjs
specs/: README.md  architecture.md  coder.md  coder.md.new  companion.md  containers.md  devcontainers.md  editorconfig.md  frontend.md  lsp.md  protocol.md  review-comments.md  roadmap.md  slack-chat.md
specs/decisions/: 0001-stack.md  0002-workspace-host.md  0003-no-adapter-layer.md  0004-code-style.md  0005-bootstrap.md  0006-no-settings-file.md  0007-compose-and-moon-base.md  0008-host-shared-daemon.md  0009-terminal-pty-and-targets.md  0010-coder-rewrite-not-acp.md  0011-rename-moon-agent-to-moon-remote.md  0012-format-on-save.md  0013-format-on-save-file-based.md  0014-process-per-workspace.md  0015-git-serialisation.md  0016-coder-concurrent-sessions.md  0017-project-compose-restart-override.md  0018-auto-stage-on-merge-save.md  0019-coder-format-on-save-deferred.md  0020-container-status-cache.md  0021-git-editor-forward.md  0022-coder-host-mode-override.md  0023-mobile-companion-bridge.md  0024-bridge-lifecycle.md  0024-git-commit-in-container.md  0025-coder-arbitrary-path-fs.md  0026-socket-dir-mount.md  0027-review-comments.md  0028-coder-worktree-sessions.md  0029-worktrees-inside-parent.md  0030-orchestrator-sessions.md  0031-remote-bridge-relay.md  0032-block-level-markdown-streaming.md  0033-coder-mcp.md  0034-detached-background-processes.md  0035-public-relay-deployment.md  0036-worker-takeover.md  0037-cross-project-workers.md  0038-sticky-scroll.md  0039-git-refs-watching.md  (+2 more)
specs/roadmaps/: README.md  phase-01.5-editor-polish.md  phase-02-containers.md  phase-02.5-multi-folder.md  phase-03-terminal.md  phase-05-git.md  phase-05.7-review-comments.md  phase-06-coder.md  phase-07-multi-workspace.md  phase-11-slack-chat.md  phase-13-mobile-companion.md  phase-14-remote-bridge.md
specs/test-plans/: 0000-template.md  0001-initial-bootstrap.md  0002-editorconfig.md  0003-per-pane-tabs.md  0004-markdown-preview.md  0005-focus-regions.md  0006-untitled-tabs.md  0007-file-deletion.md  0008-slack-foundation.md  0009-slack-read-only-chat.md  0010-multi-folder-workspace.md  0010-slack-mrkdwn.md  0011-container-state-dir.md  0011-slack-polling.md  0012-slack-send.md  0012-workspace-shell-vs-project-services.md  0013-slack-reactions.md  0014-codemirror-syntax-themes.md  0015-shutdown-stop-and-auto-resume.md  0016-terminal-basics.md  0017-slack-workspace-card.md  0018-theme-system-mode.md  0019-window-state-persistence.md  0020-file-tree-gitignore-fade.md  0021-file-tree-full-git-status.md  0022-discard-file-changes.md  0023-editor-qol-brackets.md  0024-lsp-typescript-stage-1.md  0025-markdown-syntax-highlighting.md  0026-bottom-panel-auto-terminal.md  0027-lsp-goto-definition-nav-history.md  0028-nav-history-positions-cross-folder.md  0029-inline-git-blame.md  0030-rust-lsp.md  0031-rust-lsp-in-container.md  0032-git-diff-view.md  0033-git-change-gutter.md  0034-diff-view-dedicated-tab.md  0035-diff-view-codemirror-merge.md  0036-diff-view-single-tab-toggle.md  (+65 more)
src/: App.svelte  global.d.ts  main.ts  styles.css
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/bridge/: .gitkeep
src-tauri/src/: bridge_rpc.rs  focus_socket.rs  fs_watcher.rs  lib.rs  main.rs  remote_bridge.rs  shell_resolver.rs  shutdown.rs  slack_poller.rs  state.rs  system_theme_watcher.rs  window_icon.rs
src-tauri/src/commands/: app_info.rs  app_state.rs  coder.rs  companion.rs  compose_logs.rs  container.rs  editor_forward.rs  editorconfig.rs  fs.rs  logs.rs  lsp.rs  mod.rs  next_edit.rs  ports.rs  project_compose.rs  search.rs  session.rs  slack.rs  system.rs  terminal.rs  ui.rs  window.rs  workspace.rs
src/lib/: bottomPanel.svelte.ts  coder.svelte.ts  commands.svelte.ts  companion.svelte.ts  composeLogs.svelte.ts  container.svelte.ts  focus.ts  ipc.ts  logs.svelte.ts  markdown.test.ts  markdown.ts  openTerminal.ts  ports.svelte.ts  projectCompose.svelte.ts  protocol.ts  rightPanel.svelte.ts  slack.svelte.ts  state.svelte.ts  terminal.svelte.ts  (+5 more)
(+288 files in other folders)
