[workspace]
resolver = "2"
members = ["src-tauri", "crates/moon-protocol", "crates/moon-core", "crates/moon-agent", "crates/moon-slack"]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
moon-core = { path = "crates/moon-core" }
moon-protocol = { path = "crates/moon-protocol" }
moon-slack = { path = "crates/moon-slack" }

anyhow = "1.0"
async-trait = "0.1"
camino = { version = "1.2", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8.0"
ignore = "0.4"
ec4rs = "1.2"
trash = "5.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = "3"
ts-rs = { version = "12.0", features = ["serde-compat", "serde-json-impl"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 1
