[workspace]
resolver = "2"
members = [
	"src-tauri",
	"crates/moon-protocol",
	"crates/moon-core",
	"crates/moon-remote",
	"crates/moon-coder",
	"crates/moon-slack",
	"crates/moon-container",
	"crates/moon-terminal",
]

[workspace.package]
edition = "2021"
# Bumped from 1.85 to 1.89 for stable `std::fs::File::lock()` —
# moon-core's app_state.json mutator relies on cross-process
# `flock(2)` to serialize writes between sibling `moon-ide`
# processes (Phase 7 process-per-workspace). The previous third-
# party-crate route (fs4 / fs2) duplicates a stdlib feature for
# zero benefit.
rust-version = "1.89"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
moon-core = { path = "crates/moon-core" }
moon-protocol = { path = "crates/moon-protocol" }
moon-coder = { path = "crates/moon-coder" }
moon-slack = { path = "crates/moon-slack" }
moon-container = { path = "crates/moon-container" }
moon-terminal = { path = "crates/moon-terminal" }

anyhow = "1.0"
async-trait = "0.1"
camino = { version = "1.2", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8.0"
ignore = "0.4"
globset = "0.4"
ec4rs = "1.2"
trash = "5.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# Pulled in transitively via reqwest's `stream` feature already; named
# explicitly here so the coder's SSE consumer can lean on `StreamExt`
# without a hidden cross-crate dependency.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# keyring v3 ships with no backend by default — without these features
# every platform falls back to the in-memory mock and tokens silently
# disappear between launches. `crypto-rust` keeps us off system OpenSSL.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
ts-rs = { version = "12.0", features = ["serde-compat", "serde-json-impl"] }
lsp-types = "0.97"
which = "8.0"
url = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 1
