[package]
name = "moon-desktop"
version = "0.0.0"
description = "moon-ide desktop shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "moon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
moon-container = { workspace = true }
moon-core = { workspace = true }
moon-protocol = { workspace = true }
moon-slack = { workspace = true }
moon-terminal = { workspace = true }

tauri = { version = "2.10", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-opener = "2"

anyhow = { workspace = true }
async-trait = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6.0.0"
uuid = { version = "1.18", features = ["v4"] }
# Terminal IPC ferries arbitrary 8-bit PTY bytes (escape sequences,
# UTF-8 fragments split mid-codepoint on read boundaries) over Tauri's
# JSON payload codec; base64 framing keeps the wire format honest.
# `base64` 0.22 ships the `Engine` trait we use directly.
base64 = "0.22"
