[package]
name = "moon-desktop"
version = "0.0.0"
description = "moon-ide desktop shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "moon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
moon-coder = { workspace = true }
moon-container = { workspace = true }
moon-core = { workspace = true }
moon-protocol = { workspace = true }
moon-slack = { workspace = true }
moon-terminal = { workspace = true }

tauri = { version = "2.10", features = ["devtools", "protocol-asset"] }
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2.4"

anyhow = { workspace = true }
async-trait = { workspace = true }
camino = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
keyring = { workspace = true }
dirs = "6.0.0"
uuid = { version = "1.18", features = ["v4"] }
futures-util = "0.3"
reqwest = { workspace = true }
# Remote / relay bridge client (Phase 14.3, ADR 0031). The IDE dials
# out to a remote bridge over WSS, TOFU-pins the bridge cert, and
# answers forwarded `call`/`subscribe` frames. `tokio-tungstenite`
# for the WS client, `tokio-rustls` for the TLS layer with a
# no-verify (TOFU) config so we can pin the fingerprint ourselves,
# `sha2` to compute the cert fingerprint, and `rcgen` is not needed
# (the IDE doesn't generate certs — the bridge does).
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
sha2 = "0.10"
hostname = "0.4"

# ashpd is the XDG Desktop Portal client. Linux-only because:
# - WebKitGTK's `matchMedia('(prefers-color-scheme: dark)')` and
#   Tauri's `getCurrentWindow().theme()` both ignore GTK / GNOME /
#   KDE theme on Linux and default to light, so we read and watch
#   the portal's `org.freedesktop.appearance color-scheme` setting
#   directly.
# - macOS / Windows don't need it — the webview's native theme API
#   answers correctly and fires change events — so the dep stays
#   Linux-gated.
# `libc::kill(pid, 0)` powers the shutdown-sentinel liveness check
# in `focus_socket` (is the previous owner's teardown still
# running, or did it crash?). Unix-only; Windows support is
# deferred along with the rest of the single-instance plumbing.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
ashpd = "0.10"
# Terminal IPC ferries arbitrary 8-bit PTY bytes (escape sequences,
# UTF-8 fragments split mid-codepoint on read boundaries) over Tauri's
# JSON payload codec; base64 framing keeps the wire format honest.
# `base64` 0.22 ships the `Engine` trait we use directly.
base64 = "0.22"

[dev-dependencies]
tempfile = { workspace = true }
