[package]
name = "moon-bridge"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "moon-bridge"
path = "src/main.rs"

[dependencies]
moon-core = { workspace = true }
moon-protocol = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
base64 = "0.21"
futures-util = { workspace = true }
keyring = { workspace = true }
mdns-sd = "0.20"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-tungstenite = "0.29"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.18", features = ["v4"] }
