[package]
name = "moon-coder"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
moon-core = { workspace = true }
moon-protocol = { workspace = true }
# Used purely for the `container_name_for_workspace` + `container_cwd_for_folder`
# helpers so the coder's `bash` tool builds the same `docker exec` framing
# as terminals/LSP. Adding it here, not a `WorkspaceHost::spawn` trait
# method, until there's a second host implementor that would actually
# benefit from the abstraction.
moon-terminal = { workspace = true }
# `moon_container::Workspace::status()` answers "is the workspace shell
# container running?" — the same query `lsp.rs::resolve_target` makes
# to decide whether to host the LSP locally or via `docker exec`. The
# coder's `bash` tool reuses it so terminals/LSP/coder all agree on
# the routing target.
moon-container = { workspace = true }

async-trait = { workspace = true }
camino = { workspace = true }
keyring = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
