[package]
name = "moon-coder"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
moon-core = { workspace = true }
moon-protocol = { workspace = true }
# Used purely for the `container_name_for_workspace` + `container_cwd_for_folder`
# helpers so the coder's `bash` tool builds the same `docker exec` framing
# as terminals/LSP. Adding it here, not a `WorkspaceHost::spawn` trait
# method, until there's a second host implementor that would actually
# benefit from the abstraction.
moon-terminal = { workspace = true }
# `moon_container::Workspace::status()` answers "is the workspace shell
# container running?" — the same query `lsp.rs::resolve_target` makes
# to decide whether to host the LSP locally or via `docker exec`. The
# coder's `bash` tool reuses it so terminals/LSP/coder all agree on
# the routing target.
moon-container = { workspace = true }

async-trait = { workspace = true }
camino = { workspace = true }
futures-util = { workspace = true }
keyring = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
# Hugging Face Xet client. Used by `hub_sync.rs` to upload coder
# session JSONLs into a workspace-scoped bucket so the Hub can
# render them in its pi-mono trace viewer. The crate publishes as
# `hf-xet` on crates.io but exposes its root namespace as `xet`,
# hence the `use xet::xet_session` imports.
hf-xet = "1.5"

[dev-dependencies]
tempfile = "3"
