[package]
name = "moon-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
moon-protocol = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
ec4rs = { workspace = true }
uuid = { version = "1.18", features = ["v4", "serde"] }
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
regex-syntax = "0.8"

[dev-dependencies]
tempfile = "3.16"
