[package]
name = "moon-remote"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "moon-remote"
path = "src/main.rs"

[dependencies]
moon-core = { workspace = true }
moon-protocol = { workspace = true }

anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
