[package]
name = "moon-terminal"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
moon-protocol = { workspace = true }

camino = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Cross-platform PTY (Unix `posix_openpt` / Windows ConPTY) from
# the Wezterm project. See ADR 0009.
portable-pty = "0.9"
